apps/tronbyt-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: tronbyt-server
    app.kubernetes.io/name: tronbyt-server
  name: tronbyt-server
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: tronbyt-server
      app.kubernetes.io/name: tronbyt-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tronbyt-server
        app.kubernetes.io/name: tronbyt-server
    spec:
      containers:
        - name: tronbyt-server
          image: tronbyt-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              hostPort: 8000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            exec:
              command: [ "python3", "/app/healthcheck.py", "http://localhost:8000/health" ]
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app/users
              name: appconfig
              subPath: users
            - mountPath: /app/data
              name: appconfig
              subPath: data
      volumes:
        - name: appconfig
          persistentVolumeClaim:
            claimName: longhorn-tronbyt-server-config
