apps/tronbyt-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: tronbyt-server
    app.kubernetes.io/name: tronbyt-server
  name: tronbyt-server
  namespace: default
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: tronbyt-server
    app.kubernetes.io/name: tronbyt-server
  type: LoadBalancer
