apps/tronbyt-server/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tronbyt-server
  namespace: default
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`tronbyt.x.pmcd.io`)
      kind: Rule
      services:
        - name: tronbyt-server
          port: 8888
  tls:
    certResolver: pmcdio
